updated content on the website

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,7 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
 <p>
-	The <a href=""><em>Ruby on Rails Tutorial</em></a> is a
-	<a href="">book</a> and
-	<a href="">screencast series</a>
-	to teach web development with
-	<a href="">Ruby on Rails</a>.
-	This is the sample application for the tutorial.
+	The <em>Micro Twitter application</em> is a
+	Twitter like application where users can register, login,
+	follow other users, get personalized feed and more.
 </p>
