--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,4 +3,6 @@
 <p>
 	Contact the Ruby on Rails Tutorial about the sample app at the
 	<a href="http://www.railstutorial.org/#contact">contact page</a>
+	Hi! I am Rohan Sapre, developer of this website.
+	Feel free to <a href="mailto:sapre.r@husky.neu.edu?Subject=Micro%20Twitter%20Issue" target="_top">contact me</a> regarding any questions.
 </p>
