--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,6 @@
 <% provide(:title, "Help") %>
 <h1>Help</h1>
 <p>
-	Get help on the Ruby on Rails Tutorail at the
-	<a href="http://www.railstutorial.org/#help">Rails tutorial help section</a>
-	To get help on this sample app, see the
-	<a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em> book</a>
+	Get help on using the application or any regarding any other queries feel free to
+	<a href="mailto:sapre.r@husky.neu.edu?Subject=Micro%20Twitter%20Issue" target="_top">contact me</a>.
 </p>
