--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,12 @@
 <footer class="footer">
 	<small>
-		The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-		by <a href="http://www.michaelhartl.com/">Michael Hart</a>
+		Developed by <a href="https://in.linkedin.com/in/rohansapre" target="_blank">Rohan Sapre</a>
 	</small>
 	<nav>
 		<ul>
 			<li><%= link_to "About", about_path %></li>
 			<li><%= link_to "Contact", contact_path %></li>
-			<li><a href="http://news.railstutorial.org/">News</a></li>
+			<li><a href="https://news.google.com/">News</a></li>
 		</ul>
 	</nav>
 </footer>
